--- a/web/docs/03-recettes/spring-03-post-service-jpa.mdx
+++ b/web/docs/03-recettes/spring-03-post-service-jpa.mdx
@@ -94,7 +94,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
     1. ajouter un truc en validant qu'il n'y a pas déjà un truc avec le même chose
     2. accéder à la liste des trucs
 
-    On crée une classe TrucService avec ce code :
+    On crée une classe **TrucService** avec ce code :
     <GHCode
                 repo="4N6-Mobile"
                 filePath="code/serveur3-service-bd-test/src/main/java/ca/cem/TrucService.java"
@@ -110,7 +110,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
   <TabItem value="Controler" label="Contrôleur">
 
-      On va maintenant pouvoir appeler notre service depuis notre contrôleur
+      On va maintenant pouvoir appeler notre service depuis notre ***TrucController*** :
       <GHCode
                   repo="4N6-Mobile"
                   filePath="code/serveur3-service-bd-test/src/main/java/ca/cem/Controlleur.java"
