--- a/web/docs/03-recettes/spring-03-post-service-jpa.mdx
+++ b/web/docs/03-recettes/spring-03-post-service-jpa.mdx
@@ -118,7 +118,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
       Les éléments importants ici pour Spring Boot:
       - on a pu injecter notre service directement dans le contrôleur
-      - on voit qu'on peut exposer la même méthode de service avec plusieurs méthodes HTT
+      - on voit qu'on peut exposer la même méthode de service avec plusieurs méthodes HTTP
 
     </TabItem>
 
