--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -4,7 +4,7 @@ hide_table_of_contents: true
 
 # TP3 : CTF et suppression
 
-:::note Repository Git &#8203;<Highlight color="tip">1 point</Highlight>
+:::note Repository Git &#8203;<Highlight color="tip">2 points</Highlight>
 Un minimum de 4 commits de tailles comparables.
 Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
 
