--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -10,7 +10,7 @@ Ces points sont conditionnés à la remise d'au moins un commit par 2 séances d
 
 :::
 
-::::note Suppressions des tâches
+::::note Suppression des tâches
 
 <Row>
 
