mise en page améliorée

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -108,6 +108,10 @@ La suppression est implantée dans l'interface graphique. L'interface se met à 
 
 ::::
 
+<Row>
+
+<Column>
+
 :::caution Capture du drapeau / faille de sécurité du serveur
 
 Notre serveur contient une faille de contrôle d'accès sur la mise à jour du pourcentage d'une tâche. Vous devez trouver un moyen d'exploiter cette faille. Pendant la séance 13.2 vous devrez montrer que vous êtes capables de modifier une tâche qui ne vous appartient pas.
@@ -117,6 +121,10 @@ Notre serveur contient une faille de contrôle d'accès sur la mise à jour du p
 3. &#8203;<Highlight color="tip">3 points</Highlight> Tu dois corriger la faille dans le serveur modifié que tu remets avec ton TP3.
 
 :::
+
+</Column>
+
+<Column>
 
 :::danger Fonctionnement global &#8203;<Highlight color="danger">5 points négatifs</Highlight>
 
@@ -128,3 +136,7 @@ L'application fonctionne sans plantage et correctement. Ce pointage fonctionne e
 - Autre cas...
 
 :::
+
+</Column>
+
+</Row>
