--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -81,10 +81,10 @@ Vous devez modifier le serveur fourni pour permettre la suppression d'une tâche
 Implanter le contrôle d'accès : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
 
 &#8203;<Highlight color="tip">2 points</Highlight>
-Tu dois produire les tests unitaires pour la suppression d'une tâche au niveau de la couche de service:
-- Assure-toi que la suppression fonctionne si on fournit un ID correct.
-- Détermine le comportement à avoir si on fournit un ID erronné et implante un test qui valide ce comportement.
-- Valide que le contrôle d'accès fonctionne correctement.
+Vous devez produire les tests unitaires pour la suppression d'une tâche au niveau de la couche de service :
+- Assurez-vous que la suppression fonctionne si on fournit un ID correct.
+- Déterminez le comportement à avoir si on fournit un ID erronné et implantez un test qui valide ce comportement.
+- Validez que le contrôle d'accès fonctionne correctement.
 
 :::
 
@@ -114,11 +114,11 @@ La suppression est implantée dans l'interface graphique. L'interface se met à 
 
 :::caution Capture du drapeau / faille de sécurité du serveur
 
-Notre serveur contient une faille de contrôle d'accès sur la mise à jour du pourcentage d'une tâche. Vous devez trouver un moyen d'exploiter cette faille. Pendant la séance 13.2 vous devrez montrer que vous êtes capables de modifier une tâche qui ne vous appartient pas.
+Notre serveur contient une faille de contrôle d'accès sur la mise à jour du pourcentage d'une tâche. Vous devez trouver un moyen d'exploiter cette faille. Pendant la séance 13.2 vous devrez montrer que vous êtes capable de modifier une tâche qui ne vous appartient pas.
 
-1. &#8203;<Highlight color="tip">3 points</Highlight> Tu dois montrer pendant la séance 13.2 que tu es capable de modifier (une seule) tâche qui ne t'appartient pas, selon les modalités données en classe.
-2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI TU AS RÉUSSI À EXPLOITER LA FAILLE**, explique en détails les étapes qui t'ont permis d'exploiter la faille de sécurité dans un fichier nommé faille.md à la racine de ton projet. Mets ton fichier explicatif à la racine de ton TP3.
-3. &#8203;<Highlight color="tip">3 points</Highlight> Tu dois corriger la faille dans le serveur modifié que tu remets avec ton TP3.
+1. &#8203;<Highlight color="tip">3 points</Highlight> Vous devez montrer pendant la séance 13.2 que vous êtes capable de modifier (une seule) tâche qui ne vous appartient pas, selon les modalités données en classe.
+2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI VOUS AVEZ RÉUSSI À EXPLOITER LA FAILLE**, expliquez en détails les étapes qui vous ont permis d'exploiter la faille de sécurité dans un fichier nommé faille.md à la racine de votre projet. Mettez votre fichier explicatif à la racine de votre TP3.
+3. &#8203;<Highlight color="tip">3 points</Highlight> Vous devez corriger la faille dans le serveur modifié que vous remettez avec votre TP3.
 
 :::
 
