--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -65,34 +65,53 @@ Tous les messages doivent être traduits pour les 2 langues.
 
 ::::note Suppression des tâches
 
+<!-- <Row>
+
+<Column> -->
+
+:::tip Suppression dans le serveur
+
 <Row>
 
 <Column>
 
-:::tip Suppression dans le serveur
-
 &#8203;<Highlight color="tip">4 points</Highlight>
 Vous devez modifier le serveur fourni pour permettre la suppression d'une tâche. Il faut :
-- Ajouter une route (POST GET DELETE + url) dans un controleur.
+- Ajouter une route dans un **controleur**.
 - Ajouter une méthode dans le **service** pour supprimer une tâche.
 - Utiliser le repository pour la suppression.
 
 &#8203;<Highlight color="tip">1 point</Highlight>
-Implanter le contrôle d'accès : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
+Vous devez envoyer un message d'erreur approprié (et traduit) si la tâche à supprimer n'existe plus (par exemple elle a déjà été supprimée sur un autre appareil).
 
-&#8203;<Highlight color="tip">2 points</Highlight>
-Vous devez produire les tests unitaires pour la suppression d'une tâche au niveau de la couche de service :
-- Assurez-vous que la suppression fonctionne si on fournit un ID correct.
-- Déterminez le comportement à avoir si on fournit un ID erronné et implantez un test qui valide ce comportement.
-- Validez que le contrôle d'accès fonctionne correctement.
-
-:::
+&#8203;<Highlight color="tip">1 point</Highlight>
+Vous devez implanter le **contrôle d'accès** : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
 
 </Column>
 
 <Column>
 
-:::tip Suppression dans l'interface graphique
+&#8203;<Highlight color="tip">2 points</Highlight>
+Vous devez produire des tests unitaires pour la suppression d'une tâche au niveau de la couche de service :
+- Vérifier que la suppression fonctionne avec un ID correct :
+    - Créer un utilisateur, lui ajouter une tâche, vérifier qu'elle a été ajoutée, la supprimer, vérifier qu'elle n'est plus là.
+    - ATTENTION : re-récupérez l'utilisateur après lui avoir ajouté une tâche, avant de la supprimer.
+- Vérifier que la suppression ne fonctionne pas avec un ID incorrect.
+- Vérifier que le **contrôle d'accès** fonctionne (Bob ne peut pas supprimer une tâche d'Alice) :
+    - Créer Alice, lui ajouter une tâche, vérifier qu'elle a été ajoutée.
+    - Créer Bob, essayer de supprimer la tâche d'Alice, vérifier que ça ne fonctionne pas.
+
+</Column>
+
+</Row>
+
+:::
+
+<!-- </Column>
+
+<Column> -->
+
+:::tip Suppression dans le client
 
 Vous pouvez choisir l'endroit dans l'interface où implanter la suppression (dans la liste, dans la consultation)
 ainsi que le moyen de déclencher la suppression (bouton, swipe, etc.).
@@ -102,9 +121,9 @@ La suppression est implantée dans l'interface graphique. L'interface se met à 
 
 :::
 
-</Column>
+<!-- </Column>
 
-</Row>
+</Row> -->
 
 ::::
 
