--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -117,7 +117,7 @@ ainsi que le moyen de déclencher la suppression (bouton, swipe, etc.).
 La suppression est implantée dans l'interface graphique. L'interface se met à jour après la suppression.
 
 &#8203;<Highlight color="tip">1 point</Highlight>
-Vous devez envoyer un message d'erreur approprié (et traduit) si la tâche à supprimer n'existe plus (par exemple elle a déjà été supprimée sur un autre appareil).
+Vous devez afficher un message d'erreur approprié (et traduit) si la tâche à supprimer n'existe plus (par exemple elle a déjà été supprimée sur un autre appareil).
 
 :::
 
