--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -30,7 +30,7 @@ Dans la phase 2, vous connecterez votre interface graphique de la phase 1 au ser
 
 :::note Repository Git &#8203;<Highlight color="tip">2 points</Highlight>
 
-Un minimum de 6 commits de tailles comparables. Tu peux viser un commit par appel au serveur implanté.
+Un minimum de 6 commits de tailles comparables. Vous pouvez viser un commit par appel au serveur implanté.
 
 Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
 
