--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -11,169 +11,183 @@ Si un as un morceau de code, on peut souhaiter savoir dans quel ordre les instru
 On veut accomplir 2 éléments principaux :
 1. indiquer quelles lignes de code s'exécutent dans quel ordre
 2. indiquer les effets de chaque ligne de code
+3. indiquer la pile d'appels
 
-## Exemple simple
+<Tabs queryString="recette-activite">
 
-<Row>
+    <TabItem value="Exemple simple" label="Exemple simple">
 
-<Column>
+        <Row>
 
+        <Column>
 
-### Code
+        ### Code
 
-Si on a le code suivant :
-```kotlin  showLineNumbers
-fun main() {
-    val a = 3 + 4
-    val b = a * 2
-    println("salut " + b)
-}
-```
-
-</Column>
-<Column>
-### Trace
-On aura la trace suivante :
-
-| ligne exécutée | effet                             | pile d'appels |
-|-----------------|-----------------------------------|---|
-| val a = 3 + 4       | a: 7                             | main          |
-| val b = a * 2       | a: 7, b: 14                     | main          |
-| println("salut " + b) | a: 7, b: 14, affiche "salut 14" | main          |
-
-
-</Column>
-</Row>
-
-Dans le cas d'une séquence d'instructions, on peut voir que les instructions sont exécutées dans
-l'ordre de lecture du code. Simple!
-
-Pour voir le code des tableaux markdown, [ICI](https://github.com/departement-info-cem/4N6-Mobile/blob/main/web/docs/03-recettes/produire-une-trace.mdx?plain=1).
-
-Note : pour chaque page de ce site, tu peux cliquer sur le bouton **Éditer cette page** en bas pour voir le code markdown.
-
-## Exemple avec boucle
-<Row>
-<Column>
-Si on a le code suivant :
-```kotlin showLineNumbers
-fun main() {
-    for (i in 1..3){
-        if (i % 2 == 0) {
-            println("c'est pair " + i)
+        Si on a le code suivant :
+        ```kotlin  showLineNumbers
+        fun main() {
+            val a = 3 + 4
+            val b = a * 2
+            println("salut " + b)
         }
-        else {
-            println("ah ben ah ben, c'est impair " + i)
+        ```
+
+        </Column>
+        <Column>
+        ### Trace
+        On aura la trace suivante :
+
+        | ligne exécutée | effet                             | pile d'appels |
+        |-----------------|-----------------------------------|---|
+        | val a = 3 + 4       | a: 7                             | main          |
+        | val b = a * 2       | a: 7, b: 14                     | main          |
+        | println("salut " + b) | a: 7, b: 14, affiche "salut 14" | main          |
+
+
+        </Column>
+        </Row>
+
+        Dans le cas d'une séquence d'instructions, on peut voir que les instructions sont exécutées dans
+        l'ordre de lecture du code. Simple!
+
+        Pour voir le code des tableaux markdown, [ICI](https://github.com/departement-info-cem/4N6-Mobile/blob/main/web/docs/03-recettes/produire-une-trace.mdx?plain=1).
+
+        Note : pour chaque page de ce site, tu peux cliquer sur le bouton **Éditer cette page** en bas pour voir le code markdown.
+
+    </TabItem>
+
+    <TabItem value="Exemple avec boucle" label="Exemple avec boucle">
+
+        <Row>
+        <Column>
+
+        ### Code
+        ```kotlin showLineNumbers
+        fun main() {
+            for (i in 1..3){
+                if (i % 2 == 0) {
+                    println("c'est pair " + i)
+                }
+                else {
+                    println("ah ben ah ben, c'est impair " + i)
+                }
+            }
         }
-    }
-}
-```
+        ```
 
-On voit que :
-- on n'indique que les lignes qui s'exécutent en vrai
-- certaines lignes s'exécutent plusieurs fois, c'est le principe de la boucle!
-- on appelle ce cheminement le flot de contrôle
+        On voit que :
+        - on n'indique que les lignes qui s'exécutent en vrai
+        - certaines lignes s'exécutent plusieurs fois, c'est le principe de la boucle!
+        - on appelle ce cheminement le flot de contrôle
 
-</Column>
-<Column>
-On aura la trace suivante :
+        </Column>
+        <Column>
 
-| ligne exécutée    | effet                            | pile d'appels   |
-|-------------------|----------------------------------|-----------------|
-| for (i in 1..3) | i parcourt l'interval 1, 2, 3 | main      |
-| if (i % 2 == 0) | i: 1 <br /> i%2 vaut 1        | main      |
-| println("ah ben ah ben, c'est impair " + i) | i: 1 <br /> affiche "ah ben ah ben, c'est impair 1" | main |
-| for (i in 1..3) | i rendu à 2 | main      |
-| if (i % 2 == 0) | i: 2  <br /> i%2 vaut 0        | main      |
-| println("c'est pair " + i) | i: 2 <br /> affiche "c'est pair 2" | main |
-| for (i in 1..3) | i rendu à 3 | main      |
-| if (i % 2 == 0) | i: 3 <br /> i%2 vaut 1        | main      |
-| println("ah ben ah ben, c'est impair " + i) | i: 3 <br /> affiche "ah ben ah ben, c'est impair 3" | main |
+        ### Trace
 
-</Column>
-</Row>
+        | ligne exécutée    | effet                            | pile d'appels   |
+        |-------------------|----------------------------------|-----------------|
+        | for (i in 1..3) | i parcourt l'interval 1, 2, 3 | main      |
+        | if (i % 2 == 0) | i: 1 <br /> i%2 vaut 1        | main      |
+        | println("ah ben ah ben, c'est impair " + i) | i: 1 <br /> affiche "ah ben ah ben, c'est impair 1" | main |
+        | for (i in 1..3) | i rendu à 2 | main      |
+        | if (i % 2 == 0) | i: 2  <br /> i%2 vaut 0        | main      |
+        | println("c'est pair " + i) | i: 2 <br /> affiche "c'est pair 2" | main |
+        | for (i in 1..3) | i rendu à 3 | main      |
+        | if (i % 2 == 0) | i: 3 <br /> i%2 vaut 1        | main      |
+        | println("ah ben ah ben, c'est impair " + i) | i: 3 <br /> affiche "ah ben ah ben, c'est impair 3" | main |
+
+        </Column>
+        </Row>
+
+    </TabItem>
+
+    <TabItem value="Exemple avec une fonction" label="Exemple avec une fonction">
+
+        <Row>
+        <Column>
+
+        ### Code
+        ```kotlin showLineNumbers
+        fun ma_fonction(a : Int, b: Int) : Int {
+            val c = a + b
+            return c
+        }
+
+        fun main() {
+            var mavariable = 3
+            var tavariable = 5
+            var z = ma_fonction(mavariable, tavariable)
+            var y = ma_fonction(4, 9)
+            print("z vaut " + z + " et y vaut " + y)
+        }
+        ```
+
+        S'il y a des fonctions dans le code, la pile d'appels permet d'indiquer :
+        - quand on entre dans le code d'une autre fonction
+        - quelles sont les fonctions qui sont encore actives
+
+        </Column>
+        <Column>
+
+        ### Trace
+
+        | ligne exécutée           | effet                                                      | pile d'appels |
+        |--------------------------|------------------------------------------------------------|---------------|
+        | var mavariable = 3                    | mavariable: 3                                                    | __main__      |
+        | var tavariable = 5                    | mavariable: 3 <br /> tavariable: 5                                               | __main__      |
+        | var z = ma_fonction(mavariable, tavariable) | mavariable: 3 <br /> tavariable: 5 <br /> appelle ma_fonction avec 3→a et 5→b       | __main__      |
+        | val c = a + b                | a: 3 <br /> b: 5 <br /> c: 8                                        | __ma_fonction__ <br /> main |
+        | return c                 | a: 3 <br /> b: 5 <br /> c: 8, retourne 8                     | __ma_fonction__ <br /> main |
+        | var z = ma_fonction(mavariable, tavariable) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8       | __main__      |
+        | var y = ma_fonction(4, 9) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8 <br />appelle ma_fonction avec 4→a et 9→b | __main__      |
+        | val c = a + b                | a: 4 <br /> b: 9 <br /> c: 13                                       | __ma_fonction__ <br /> main |
+        | return c                 | a: 4 <br /> b: 9 <br /> c: 13 <br /> retourne 13                | __ma_fonction__ <br /> main |
+        | var y = ma_fonction(4, 9) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8 <br />y:13 | __main__      |
+        | println("z vaut " + z + " et y vaut " + y) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8 <br /> y = 13 <br /> affiche "z vaut 8 et y vaut 13" | __main__     |
+
+        </Column>
+        </Row>
+
+    </TabItem>
 
 
+    <TabItem value="valider-ta-trace" label="Valider ta trace">
 
-## Exemple avec une fonction
+        Afin de valider ta trace, tu vas utiliser le débogueur de ton IDE préféré.
+        1. place un point d'arrêt sur la première ligne qui s'exécute
+        2. lance l'exécution en mode débogage
+        3. saute d'une ligne en une ligne pour voir si ta trace est correcte
 
-<Row>
-<Column>
+        Si tu te rends à la fin de l'exécution et que toutes tes valeurs étaient bonnes, tu as bien compris ce que fait le code.
 
-Si on a le code suivant :
-```kotlin showLineNumbers
-fun ma_fonction(a : Int, b: Int) : Int {
-    val c = a + b
-    return c
-}
+    </TabItem>
 
-fun main() {
-    var mavariable = 3
-    var tavariable = 5
-    var z = ma_fonction(mavariable, tavariable)
-    var y = ma_fonction(4, 9)
-    print("z vaut " + z + " et y vaut " + y)
-}
-```
+    <TabItem value="Procédure pour faire un exercice" label="Procédure pour faire un exercice">
 
-S'il y a des fonctions dans le code, la pile d'appels permet d'indiquer :
-- quand on entre dans le code d'une autre fonction
-- quelles sont les fonctions qui sont encore actives
+        1. ouvre ton repo d'exercices sur github.com
+        2. crée un fichier avec le nom suggéré dans l'exercice en appuyant sur le bouton **+** puis **Create new file**
+        3. dès que tu indiques un nom qui finit en **.md** on aura l'onglet code et l'onglet preview
+        4. copie le code de l'exercice dans le fichier, tu peux utiliser un bloc de kotlin pour avoir la syntaxe colorée. Par exemple :
+        ````markdown
+        ```kotlin
+        fun main() {
+            val a = 3 + 4
+            val b = a * 2
+            println("salut " + b)
+        }
+        ```
+        ````
 
-</Column>
-<Column>
-
-
-
-| ligne exécutée           | effet                                                      | pile d'appels |
-|--------------------------|------------------------------------------------------------|---------------|
-| var mavariable = 3                    | mavariable: 3                                                    | __main__      |
-| var tavariable = 5                    | mavariable: 3 <br /> tavariable: 5                                               | __main__      |
-| var z = ma_fonction(mavariable, tavariable) | mavariable: 3 <br /> tavariable: 5 <br /> appelle ma_fonction avec 3→a et 5→b       | __main__      |
-| val c = a + b                | a: 3 <br /> b: 5 <br /> c: 8                                        | __ma_fonction__ <br /> main |
-| return c                 | a: 3 <br /> b: 5 <br /> c: 8, retourne 8                     | __ma_fonction__ <br /> main |
-| var z = ma_fonction(mavariable, tavariable) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8       | __main__      |
-| var y = ma_fonction(4, 9) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8 <br />appelle ma_fonction avec 4→a et 9→b | __main__      |
-| val c = a + b                | a: 4 <br /> b: 9 <br /> c: 13                                       | __ma_fonction__ <br /> main |
-| return c                 | a: 4 <br /> b: 9 <br /> c: 13 <br /> retourne 13                | __ma_fonction__ <br /> main |
-| var y = ma_fonction(4, 9) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8 <br />y:13 | __main__      |
-| println("z vaut " + z + " et y vaut " + y) | mavariable: 3 <br /> tavariable: 5 <br /> z: 8 <br /> y = 13 <br /> affiche "z vaut 8 et y vaut 13" | __main__     |
-
-</Column>
-</Row>
+        5. ajoute la trace d'exécution en dessous du code dans un tableau markdown. Par exemple :
+        ````markdown
+        | ligne exécutée  | effet                             | pile d'appels |
+        |-----------------|-----------------------------------|---------------|
+        | val a = 3 + 4   | a: 7                              | __main__      |
+        ````
+        6. Tu peux utiliser des balises html `</br>` pour faire un retour de ligne, par exemple dans la pile d'appels.
+        7. Crée-toi un projet kotlin ou Android pour [valider ta trace](?recette-activite=valider-ta-trace) en utilisant le débogueur.
 
 
-## Valider ta trace
-
-Afin de valider ta trace, tu vas utiliser le débogueur de ton IDE préféré.
-1. place un point d'arrêt sur la première ligne qui s'exécute
-2. lance l'exécution en mode débogage
-3. saute d'une ligne en une ligne pour voir si ta trace est correcte
-
-Si tu te rends à la fin de l'exécution et que toutes tes valeurs étaient bonnes, tu as bien compris ce que fait le code.
-
-## Procédure pour faire un exercice
-
-1. ouvre ton repo d'exercices sur github.com
-2. crée un fichier avec le nom suggéré dans l'exercice en appuyant sur le bouton **+** puis **Create new file**
-3. dès que tu indiques un nom qui finit en **.md** on aura l'onglet code et l'onglet preview
-4. copie le code de l'exercice dans le fichier, tu peux utiliser un bloc de kotlin pour avoir la syntaxe colorée. Par exemple :
-````markdown
-```kotlin
-fun main() {
-    val a = 3 + 4
-    val b = a * 2
-    println("salut " + b)
-}
-```
-````
-
-5. ajoute la trace d'exécution en dessous du code dans un tableau markdown. Par exemple :
-````markdown
-| ligne exécutée  | effet                             | pile d'appels |
-|-----------------|-----------------------------------|---------------|
-| val a = 3 + 4   | a: 7                              | __main__      |
-````
-6. Tu peux utiliser des balises html `</br>` pour faire un retour de ligne, par exemple dans la pile d'appels.
-7. Crée-toi un projet kotlin ou Android pour [valider ta trace](#valider-ta-trace) en utilisant le débogueur.
-
+    </TabItem>
+</Tabs>
