--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -56,7 +56,7 @@ On veut accomplir 2 éléments principaux :
 
     </TabItem>
 
-    <TabItem value="Exemple avec boucle" label="Exemple avec boucle">
+    <TabItem value="Avec boucle" label="Avec boucle">
 
         <Row>
         <Column>
@@ -102,7 +102,7 @@ On veut accomplir 2 éléments principaux :
 
     </TabItem>
 
-    <TabItem value="Exemple avec une fonction" label="Exemple avec une fonction">
+    <TabItem value="Avec fonction" label="Avec fonction">
 
         <Row>
         <Column>
@@ -151,8 +151,35 @@ On veut accomplir 2 éléments principaux :
 
     </TabItem>
 
+    {/* <TabItem value="Requête client-serveur" label="Requête client-serveur">
 
-    <TabItem value="valider-ta-trace" label="Valider ta trace">
+    ## TODO
+
+        <Row>
+            <Column>
+
+                ### Code
+
+                ```kotlin showLineNumbers
+                
+                ```
+
+            </Column>
+
+            <Column>
+
+                ### Trace
+
+                | ligne exécutée           | effet                                                      | pile d'appels |
+                |--------------------------|------------------------------------------------------------|---------------|
+
+            </Column>
+        </Row>
+
+    </TabItem> */}
+
+
+    <TabItem value="valider-une-trace" label="Valider une trace">
 
         Afin de valider ta trace, tu vas utiliser le débogueur de ton IDE préféré.
         1. place un point d'arrêt sur la première ligne qui s'exécute
@@ -186,7 +213,7 @@ On veut accomplir 2 éléments principaux :
         | val a = 3 + 4   | a: 7                              | __main__      |
         ````
         6. Tu peux utiliser des balises html `</br>` pour faire un retour de ligne, par exemple dans la pile d'appels.
-        7. Crée-toi un projet kotlin ou Android pour [valider ta trace](?recette-activite=valider-ta-trace) en utilisant le débogueur.
+        7. Crée-toi un projet kotlin ou Android pour [valider ta trace](?recette-activite=valider-une-trace) en utilisant le débogueur.
 
 
     </TabItem>
