--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -219,8 +219,8 @@ On veut accomplir 2 éléments principaux :
                 |```setContentView(R.layout.activity_main)```   |affiche le layout activity_main.xml    |onCreate|
                 |```retrofit.service.plus100(42).enqueue(object : retrofit2.Callback<Int> {```  |lance la requête http://10.0.2.2:8080/plus100/42 en asynchrone|onCreate|
                 |```return nombre + 100;```|retourne 142|plus100|
-                |```if (response.isSuccessful) {```|on vérifie si la réponse *response* reçue du serveur est un succès|onResponse|
-                |```Toast.makeText(this@MainActivity, response.body()!!.toString(), Toast.LENGTH_LONG).show()```|on affiche "142" dans un Toast|onResponse|
+                |```if (response.isSuccessful) {```|vérifie si la réponse *response* reçue du serveur est un succès|onResponse|
+                |```Toast.makeText(this@MainActivity, response.body()!!.toString(), Toast.LENGTH_LONG).show()```|affiche "142" dans un Toast|onResponse|
 
             </Column>
         </Row>
