application-test spécifié pour étudiants

--- a/web/docs/03-recettes/spring-03-post-service-jpa.mdx
+++ b/web/docs/03-recettes/spring-03-post-service-jpa.mdx
@@ -136,12 +136,24 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
                   Les éléments importants ici pour Spring Boot:
                   - on peut aussi injecter notre service dans les tests, chouette
                   - on doit partir une instance de Spring Boot avec l'annotation **@SpringBootTest** cela donne par exemple le contexte pour l'injection de dépendance
-                  - on veut tester sur une base de données qui n'est pas celle du système, ici on fournit un autre fichier de propriétés avec une BD en mémoire vive:
+                  - on veut tester sur une base de données qui n'est pas celle du système, ici on fournit un autre fichier de propriétés avec une BD en mémoire vive,
+                  que l'on spécifie avec **@TestPropertySource** :
 
+                  <Row>
+                  <Column>
+
+                  ![Description de l'image](/img/application-test.png)
+
+                  </Column>
+                  <Column>
+                  
                   <GHCode
                                         repo="4N6-Mobile"
                                         filePath="code/serveur3-service-bd-test/src/test/resources/application-test.properties"
                                       />
+                  
+                  </Column>
+                  </Row>
 
                 </TabItem>
 
