--- a/web/docs/03-recettes/spring-01-base.mdx
+++ b/web/docs/03-recettes/spring-01-base.mdx
@@ -22,9 +22,8 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
     Ce sont les paramètres qui ont été utilisés pour le projet serveur des profs.
 
-    En plus de ces paramètres, tu peux ajouter les dépendances suivantes (on peut toujours les rajouter plus tard) :
+    En plus de ces paramètres, tu peux ajouter la dépendance suivante (on peut toujours en rajouter plus tard) :
     - Spring Web : pour les contrôleurs REST (semblable à  WebAPI)
-    - Spring Security : pour la sécurité (semblable à IdentityServer)
 
     En cliquant sur "Generate", tu vas télécharger un fichier zip qui contient ton projet.
 
