Il manquait un Astérix!

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -136,7 +136,7 @@ Vous devez afficher un message d'erreur approprié (et traduit) si la tâche à 
 Notre serveur contient une faille de contrôle d'accès sur la mise à jour du pourcentage d'une tâche. Vous devez trouver un moyen d'exploiter cette faille. Pendant la séance 13.2 vous devrez montrer que vous êtes capable de modifier une tâche qui ne vous appartient pas.
 
 1. &#8203;<Highlight color="tip">3 points</Highlight> Vous devez montrer pendant la séance 13.2 que vous êtes capable de modifier (une seule) tâche qui ne vous appartient pas, selon les modalités données en classe.
-2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI VOUS AVEZ RÉUSSI À EXPLOITER LA FAILLE**, expliquez en détails les étapes qui vous ont permis d'exploiter la faille de sécurité dans un fichier nommé **faille.md* à la racine de votre TP3.
+2. &#8203;<Highlight color="tip">1 point</Highlight> **UNIQUEMENT SI VOUS AVEZ RÉUSSI À EXPLOITER LA FAILLE**, expliquez en détails les étapes qui vous ont permis d'exploiter la faille de sécurité dans un fichier nommé **faille.md** à la racine de votre TP3.
 3. &#8203;<Highlight color="tip">3 points</Highlight> Vous devez corriger la faille dans le serveur modifié que vous remettez avec votre TP3.
 
 :::
