--- a/web/docs/03-recettes/retrofit-03-liste.mdx
+++ b/web/docs/03-recettes/retrofit-03-liste.mdx
@@ -19,7 +19,7 @@ Regarder la recette de base pour les étapes:
 Dans cette recette, nous allons voir comment :
 
 - Récupérer une liste d'objets complexes depuis un service web.
-- L'afficher dans un RecyclerView.
+- TODO
 
 Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/Retrofit/03-ListeObjets).
 
