--- a/web/docs/03-recettes/retrofit-04-cookie.mdx
+++ b/web/docs/03-recettes/retrofit-04-cookie.mdx
@@ -13,15 +13,15 @@ ATTENTION : L'outil principal de débogage pour les appels réseaux est le netwo
 :::
 
 Nous allons voir 2 éléments:
-- comment envoyer des données en Post avec une classe de transfert
+- comment envoyer des données en POST avec une classe de transfert
 - comment implanter les cookies pour relier 2 appels ensemble
 
 
 Les cookies servent à relier plusieurs requêtes dans une session HTTP.
 
-Nous allons donc voir comment enchaîner un signup et un appel à un accueil.
+Nous allons donc voir comment enchaîner une inscription/connexion et un appel à l'accueil des tâches.
 
-Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/Retrofit/05-Cookies/).
+Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/ComposeRetrofitPostEtCookies/).
 
 <Tabs queryString="recette-activite">
 
@@ -31,74 +31,100 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
         On ajoute d'abord un cookie jar (un pot à cookies) pour que le client HTTP puisse stocker les cookies d'un appel à l'autre :
         <GHCode
             repo="4N6-Mobile"
-            filePath="code/Retrofit/05-Cookies/app/src/main/java/org/depinfo/retrofit_demo/http/SessionCookieJar.kt"
+            filePath="code/ComposeRetrofitPostEtCookies/app/src/main/java/ca/cem/composeretrofitbase/api/SessionCookieJar.kt"
         />
 
     </TabItem>
 
 
-    <TabItem value="RetrofitUtil.kt" label="RetrofitUtil.kt">
+    <TabItem value="RetrofitInstance.kt" label="RetrofitInstance.kt">
 
         Au niveau de la configuration de Retrofit, on va ajouter la gestion des cookies.
         <GHCode
             repo="4N6-Mobile"
-            filePath="code/Retrofit/05-Cookies/app/src/main/java/org/depinfo/retrofit_demo/http/UtilitaireRetrofit.kt"
+            filePath="code/ComposeRetrofitPostEtCookies/app/src/main/java/ca/cem/composeretrofitbase/api/RetrofitInstance.kt"
         />
 
         Les points importants ici:
         - on a ajouté un cookie jar (un pot à cookies) pour que le client HTTP puisse stocker les cookies d'un appel à l'autre
-        - on a tranformé l'utilitaire en singleton pour s'assurer que ce sera
-          - toujours le même utilitaire
-          - avec le même client
-          - avec le même cookie jar.
+        - on configure le client OkHttp avec le cookie jar
+        - on utilise à la fois ScalarsConverterFactory et GsonConverterFactory pour gérer différents types de réponses
 
     </TabItem>
 
-    <TabItem value="Service.kt" label="Service.kt">
+    <TabItem value="KickMyBApi.kt" label="KickMyBApi.kt">
 
-        Au niveau du service, nous allons modifier les signatures des méthodes:
-        - un appel de **signup** qui envoie en Post un objet
-        - un appel au **home** qui récupère une liste (qui sera vide pour un nouveau compte)
+        Au niveau de l'API, nous allons définir les méthodes:
+        - **inscription** qui envoie en POST un objet RequeteInscription
+        - **connexion** qui envoie en POST un objet RequeteConnexion
+        - **accueilTache** qui récupère l'accueil (nécessite d'être connecté via cookie)
 
         <GHCode
               repo="4N6-Mobile"
-              filePath="code/Retrofit/05-Cookies/app/src/main/java/org/depinfo/retrofit_demo/http/Service.kt"
+              filePath="code/ComposeRetrofitPostEtCookies/app/src/main/java/ca/cem/composeretrofitbase/api/KickMyBApi.kt"
              />
 
 
     </TabItem>
     
-    <TabItem value="SignupRequest.kt" label="SignupRequest.kt">
-        On aura besoin de cette classe pour envoyer une requête *signup* :
+    <TabItem value="RequeteInscription.kt" label="RequeteInscription.kt">
+        On aura besoin de cette classe pour envoyer une requête d'inscription :
         <GHCode
           repo="4N6-Mobile"
-          filePath="code/Retrofit/05-Cookies/app/src/main/java/org/depinfo/retrofit_demo/transfer/SignupRequest.kt"
-          startLine="3"
-          endLine="7"
+          filePath="code/ComposeRetrofitPostEtCookies/app/src/main/java/ca/cem/composeretrofitbase/api/RequeteInscription.kt"
+         />
+    </TabItem>
+
+    <TabItem value="RequeteConnexion.kt" label="RequeteConnexion.kt">
+        De même pour la connexion :
+        <GHCode
+          repo="4N6-Mobile"
+          filePath="code/ComposeRetrofitPostEtCookies/app/src/main/java/ca/cem/composeretrofitbase/api/RequeteConnexion.kt"
          />
     </TabItem>
     
-    <TabItem value="TestsHTTP.kt" label="TestsHTTP.kt">
+    <TabItem value="MainActivity.kt" label="MainActivity.kt">
+
+        Dans l'interface Compose, on va pouvoir tester les trois appels:
+
+        <GHCode
+          repo="4N6-Mobile"
+          filePath="code/ComposeRetrofitPostEtCookies/app/src/main/java/ca/cem/composeretrofitbase/MainActivity.kt"
+          startLine="82"
+          endLine="159"
+         />
+
+        Points importants:
+        - Le bouton "Inscription" fait un POST avec un objet RequeteInscription
+        - Le bouton "Connexion" fait un POST avec un objet RequeteConnexion
+        - Le bouton "Accueil Tâches" fait un GET qui utilise automatiquement le cookie de session
+        - Les réponses sont affichées dans des Cards séparées grâce à un composant réutilisable
+
+    </TabItem>
+    
+    <TabItem value="KickMyBApiInstrumentationTest.kt" label="KickMyBApiInstrumentationTest.kt">
 
         **IMPORTANT** il faut envoyer au moins une requête à https://kickmyb-server.onrender.com/ avant de rouler
         le test pour "réveiller" le serveur.
 
-        On va illustrer le fonctionnement avec 3 tests différents
-        - Un signup simple
-        - Un signup puis un appel à l'accueil
-        - Un appel à l'accueil sans signup préalable
+        Le test illustre deux scénarios d'utilisation :
 
         <GHCode
           repo="4N6-Mobile"
-          filePath="code/Retrofit/05-Cookies/app/src/androidTest/java/org/depinfo/retrofit_demo/TestCookie.kt"
-          startLine="18"
-          endLine="58"
+          filePath="code/ComposeRetrofitPostEtCookies/app/src/androidTest/java/ca/cem/composeretrofitbase/api/KickMyBApiInstrumentationTest.kt"
+          startLine="11"
+          endLine="68"
          />
 
-        Ce qu'on va observer ici :
-        - si on fait un signup, cela marche une fois, la deuxième fois le nom est déjà pris
-        - si on fait un signup puis un appel à l'accueil, cela fonctionne car le signup nous a connecté (on a récupéré un cookie), du coup le serveur sait qui on est à la requête 2
-        - si on appelle l'accueil sans signup, on n'est pas connecté, cela échoue.
+        Ce qu'on observe ici :
+        - **Test 1**: Inscription puis accès à l'accueil
+          - On s'inscrit avec un email aléatoire pour éviter les conflits
+          - L'inscription nous connecte et crée un cookie de session
+          - L'appel à l'accueil fonctionne car le cookie jar retourne automatiquement le cookie
+        - **Test 2**: Connexion puis accès à l'accueil
+          - On crée d'abord un compte avec inscription
+          - On se connecte avec ce compte
+          - On peut ensuite accéder à l'accueil grâce au cookie de session obtenu lors de la connexion
     </TabItem>
 
 </Tabs>
