Pas traduit, perte de points

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -171,6 +171,7 @@ Votre application doit fonctionner sans plantage et correctement. Ce pointage fo
 - Plantage de l'application &#8203;<Highlight color="danger">-1 point</Highlight>
 - Interface illisible &#8203;<Highlight color="danger">-1 point</Highlight>
 - Information affichée incohérente &#8203;<Highlight color="danger">-1 point</Highlight>
+- Éléments d'interface non traduits &#8203;<Highlight color="danger">-1 point</Highlight>
 - Autre cas ...
 
 :::
