--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -138,6 +138,7 @@ Votre application doit fonctionner sans plantage et correctement. Ce pointage fo
 - Plantage de l'application <Highlight color="danger">-1 point</Highlight>
 - Interface illisible <Highlight color="danger">-1 point</Highlight>
 - Information affichée incohérente <Highlight color="danger">-1 point</Highlight>
+- Éléments d'interface non traduits <Highlight color="danger">-1 point</Highlight>
 - Autre cas...
 
 :::
