--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -152,6 +152,7 @@ L'application fonctionne sans plantage et correctement. Ce pointage fonctionne e
 - Plantage de l'application <Highlight color="danger">-1 point</Highlight>
 - Interface illisible <Highlight color="danger">-1 point</Highlight>
 - Information affichée incohérente <Highlight color="danger">-1 point</Highlight>
+- Éléments d'interface non traduits <Highlight color="danger">-1 point</Highlight>
 - Autre cas...
 
 :::
