--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -57,7 +57,7 @@ La classe de réponse est la même pour les 2 car une inscription effectue égal
 
 Vous devez vous assurer que votre application gère correctement les cookies, c'est nécessaire pour que le serveur maintienne votre identité à travers les différents appels.
 
-&#8203;<Highlight color="tip">2 points</Highlight> Suite à inscription, votre tiroir doit afficher le nom d'utilisateur récupéré à la connexion. Nous vous recommandons de le stocker dans un singleton pour y avoir accès de toutes les activités.
+&#8203;<Highlight color="tip">2 points</Highlight> Suite à inscription, votre tiroir doit afficher le nom d'utilisateur récupéré à la connexion. Nous vous recommandons de le stocker dans un singleton pour y avoir accès de tous les écrans.
 
 :::
 
@@ -106,10 +106,10 @@ Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 
 :::note Déconnexion
 
-La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans toutes les activités avec le tiroir.
+La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans tous les écrans avec le tiroir.
 
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**.
-- &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
+- &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans tous les écrans avec tiroir de navigation.
 
 :::
 
