--- a/web/docs/03-recettes/retrofit-02-objet.mdx
+++ b/web/docs/03-recettes/retrofit-02-objet.mdx
@@ -2,7 +2,7 @@
 hide_table_of_contents: true
 ---
 
-# HTTP 2 - Depuis une activité
+# HTTP 2 - Depuis un écran
 
 :::tip
 ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
@@ -20,7 +20,7 @@ Regarder la recette de base pour les étapes:
 
 Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/ComposeRetrofitBase).
 
-Nous allons voir comment faire un appel à notre fonction depuis une activité:
+Nous allons voir comment faire un appel à notre fonction depuis un écran:
 - il va s'agir d'un appel asynchrone, autrement dit on n'attend pas la réponse pour continuer l'exécution
 - on va rattacher un objet appelé Callback à notre appel pour traiter la réponse
 - on aura 3 cas
@@ -31,7 +31,7 @@ Nous allons voir comment faire un appel à notre fonction depuis une activité:
 <Tabs queryString="recette-objet">
   <TabItem value="MainActivity.kt" label="MainActivity.kt">
 
-    L'activité suivante utilise Jetpack Compose pour l'interface graphique.
+    L'écran suivant utilise Jetpack Compose pour l'interface graphique.
 
     <GHCode
             repo="4N6-Mobile"
