--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -14,7 +14,7 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 ### Interface graphique
 
 - Rien ne fonctionne.
-- Les activités affichent toujours les mêmes données.
+- Les écrans affichent toujours les mêmes données.
 - Toutes les actions « réussissent » tout le temps.
 - Il n'y a aucun message d'erreur.
 
@@ -24,7 +24,7 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 
 :::note Dépôt Git &#8203;<Highlight color="tip">2 points</Highlight>
 
-Un minimum de 6 commits de tailles comparables. Au moins un commit par activité.
+Un minimum de 6 commits de tailles comparables. Au moins un commit par écran.
 
 Il ne doit pas y avoir un seul commit contenant tout alors que les autres sont vides. Les messages de commit doivent décrire l'avancement du projet dans un français correct (vérifié avec Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
 
@@ -36,31 +36,31 @@ Ces points sont conditionnés à la remise d'au moins un commit toutes les deux 
 
 </Row>
 
-### Activités
+### Écrans
 
 <Row>
 
 <Column>
 
-:::info Activité de connexion <Highlight color="tip">2 points</Highlight>
+:::info Écran de connexion <Highlight color="tip">2 points</Highlight>
 
-L'application doit démarrer sur l'activité de connexion.
+L'application doit démarrer sur l'écran de connexion.
 
 - Un champ pour le nom de l'utilisateur.
 - Un champ pour le mot de passe, masqué.
-- Un bouton « Connexion » qui amène à l'activité d'accueil.
-- Un bouton « Inscription » qui mène à l'activité d'inscription.
+- Un bouton « Connexion » qui amène à l'écran d'accueil.
+- Un bouton « Inscription » qui mène à l'écran d'inscription.
 
 :::
 
-:::info Activité d'inscription <Highlight color="tip">2 points</Highlight>
+:::info Écran d'inscription <Highlight color="tip">2 points</Highlight>
 
-L'activité d'inscription permet à l'utilisateur de créer un compte.
+L'écran d'inscription permet à l'utilisateur de créer un compte.
 
 - Un champ pour le nom de l'utilisateur.
 - Un champ pour le mot de passe, masqué.
 - Un champ pour la confirmation du mot de passe, masqué.
-- Un bouton « Inscription » qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté).
+- Un bouton « Inscription » qui mène à l'écran d'accueil (un utilisateur qui crée un compte est automatiquement connecté).
 
 :::
 
@@ -68,19 +68,19 @@ L'activité d'inscription permet à l'utilisateur de créer un compte.
 
 <Column>
 
-:::info Activité d'accueil
+:::info Écran d'accueil
 
-L'activité d'accueil affiche la liste des tâches de l'utilisateur.
+L'écran d'accueil affiche la liste des tâches de l'utilisateur.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> Il faut un bouton de type *FAB* (*Floating Action Button*) qui mène à l'activité de création d'une tâche.
-- &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un élément de la liste mène à l'activité de consultation.
+- &#8203;<Highlight color="tip">1 point</Highlight> Il faut un bouton de type *FAB* (*Floating Action Button*) qui mène à l'écran de création d'une tâche.
+- &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un élément de la liste mène à l'écran de consultation.
 - &#8203;<Highlight color="tip">2 points</Highlight> Une liste : pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque élément de la liste contient :
   - le nom de la tâche
   - le pourcentage d'avancement de la tâche
   - le pourcentage du temps écoulé entre la date de création et la date d'échéance
   - la date d'échéance
 
-Votre activité doit montrer une liste d'au moins 200 éléments codés en dur avec un nom et une date de votre choix.
+Votre écran doit montrer une liste d'au moins 200 éléments codés en dur avec un nom et une date de votre choix.
 
 :::
 
@@ -88,19 +88,19 @@ Votre activité doit montrer une liste d'au moins 200 éléments codés en dur a
 
 <Column>
 
-:::info Activité de création <Highlight color="tip">2 points</Highlight>
+:::info Écran de création <Highlight color="tip">2 points</Highlight>
 
-L'activité de création permet de créer une tâche qui s'ajoutera dans la liste des tâches de l'utilisateur.
+L'écran de création permet de créer une tâche qui s'ajoutera dans la liste des tâches de l'utilisateur.
 
 - Un champ pour le nom de la tâche.
 - Un moyen d'entrer la date d'échéance de la tâche.
-- Un bouton d'ajout qui mène à l'activité d'accueil.
+- Un bouton d'ajout qui mène à l'écran d'accueil.
 
 :::
 
-:::info Activité de consultation
+:::info Écran de consultation
 
-L'activité de consultation permet de voir le nom et la date d'échéance de la tâche. Elle permet aussi de changer son pourcentage d'avancement.
+L'écran de consultation permet de voir le nom et la date d'échéance de la tâche. Elle permet aussi de changer son pourcentage d'avancement.
 
 - &#8203;<Highlight color="tip">1 point</Highlight> On y voit :
   - le nom de la tâche
@@ -123,10 +123,10 @@ Les informations affichées sont codées en dur en attendant le TP2.
 
 :::note Tiroir de navigation
 
-Il permet d'accéder rapidement à toutes les activités principales :
+Il permet d'accéder rapidement à tous les écrans principaux :
 
-- &#8203;<Highlight color="tip">1 point</Highlight> Le tiroir est **présent** dans toutes les activités **SAUF** inscription et connexion. Le nom de l'utilisateur courant est affiché (codé en dur). Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
-- &#8203;<Highlight color="tip">2 points</Highlight> Le tiroir **fonctionne** dans toutes les activités (**SAUF** inscription et connexion). « Accueil » amène à l'activité d'accueil, « Ajout de tâche » amène à l'activité de création et « Déconnexion » amène à l'activité de connexion.
+- &#8203;<Highlight color="tip">1 point</Highlight> Le tiroir est **présent** dans tous les écrans **SAUF** inscription et connexion. Le nom de l'utilisateur courant est affiché (codé en dur). Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
+- &#8203;<Highlight color="tip">2 points</Highlight> Le tiroir **fonctionne** dans tous les écrans (**SAUF** inscription et connexion). « Accueil » amène à l'écran d'accueil, « Ajout de tâche » amène à l'écran de création et « Déconnexion » amène à l'écran de connexion.
 - &#8203;<Highlight color="tip">1 point</Highlight> Il y a l'icône « hamburger » dans la barre supérieure qui ouvre le tiroir.
 
 :::
@@ -147,7 +147,7 @@ Ajoutez un logo personnalisé à votre application. Le choix vous appartient, ma
 
 :::danger Portrait et paysage
 
-&#8203;<Highlight color="danger">Notation négative !</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez &#8203;<Highlight color="danger">1 point pour chaque activité</Highlight> où un élément n'est pas accessible ou fonctionnel dans l'un ou l'autre des modes (portrait ou paysage).
+&#8203;<Highlight color="danger">Notation négative !</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque écran. Vous perdez &#8203;<Highlight color="danger">1 point pour chaque écran</Highlight> où un élément n'est pas accessible ou fonctionnel dans l'un ou l'autre des modes (portrait ou paysage).
 
 :::
 
