--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -13,7 +13,7 @@ On veut accomplir 2 éléments principaux :
 2. indiquer les effets de chaque ligne de code
 3. indiquer la pile d'appels
 
-<Tabs queryString="recette-activite">
+<Tabs queryString="recette-ecran">
 
     <TabItem value="Exemple simple" label="Exemple simple">
 
@@ -262,7 +262,7 @@ On veut accomplir 2 éléments principaux :
         | val a = 3 + 4   | a: 7                              | __main__      |
         ````
         6. Tu peux utiliser des balises html `</br>` pour faire un retour de ligne, par exemple dans la pile d'appels.
-        7. Crée-toi un projet kotlin ou Android pour [valider ta trace](?recette-activite=valider-une-trace) en utilisant le débogueur.
+        7. Crée-toi un projet kotlin ou Android pour [valider ta trace](?recette-ecran=valider-une-trace) en utilisant le débogueur.
 
 
     </TabItem>
