--- a/web/docs/03-recettes/retrofit-03-liste.mdx
+++ b/web/docs/03-recettes/retrofit-03-liste.mdx
@@ -23,7 +23,7 @@ Dans cette recette, nous allons voir comment :
 
 Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/ComposeRetrofitObjets).
 
-<Tabs queryString="recette-activite">
+<Tabs queryString="recette-ecran">
 
 
     <TabItem value="Repo.kt" label="Repo.kt">
