--- a/web/docs/03-recettes/retrofit-04-cookie.mdx
+++ b/web/docs/03-recettes/retrofit-04-cookie.mdx
@@ -23,7 +23,7 @@ Nous allons donc voir comment encha√Æner une inscription/connexion et un appel √
 
 Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/ComposeRetrofitPostEtCookies/).
 
-<Tabs queryString="recette-activite">
+<Tabs queryString="recette-ecran">
 
 
     <TabItem value="SessionCookieJar.kt" label="SessionCookieJar.kt">
