Recette sans onglets NVDA

--- a/web/docs/03-recettes/produire-une-trace.mdx
+++ b/web/docs/03-recettes/produire-une-trace.mdx
@@ -13,9 +13,7 @@ On veut accomplir 2 éléments principaux :
 2. indiquer les effets de chaque ligne de code
 3. indiquer la pile d'appels
 
-<Tabs queryString="recette-ecran">
-
-    <TabItem value="Exemple simple" label="Exemple simple">
+##Exemple simple
 
         <Row>
 
@@ -54,9 +52,7 @@ On veut accomplir 2 éléments principaux :
 
         Note : pour chaque page de ce site, tu peux cliquer sur le bouton **Éditer cette page** en bas pour voir le code markdown.
 
-    </TabItem>
-
-    <TabItem value="Avec boucle" label="Avec boucle">
+## Avec boucle
 
         <Row>
         <Column>
@@ -100,9 +96,7 @@ On veut accomplir 2 éléments principaux :
         </Column>
         </Row>
 
-    </TabItem>
-
-    <TabItem value="Avec fonction" label="Avec fonction">
+## Avec fonction
 
         <Row>
         <Column>
@@ -149,9 +143,7 @@ On veut accomplir 2 éléments principaux :
         </Column>
         </Row>
 
-    </TabItem>
-
-    <TabItem value="Réseau" label="Réseau">
+## Réseau
 
     On veut faire la trace d'exécution lorsqu'on ouvre l'application client, en assumant que le serveur roule et que tout se passe bien.
 
@@ -225,10 +217,7 @@ On veut accomplir 2 éléments principaux :
             </Column>
         </Row>
 
-    </TabItem>
-
-
-    <TabItem value="valider-une-trace" label="Valider une trace">
+## Valider une trace
 
         Afin de valider ta trace, tu vas utiliser le débogueur de ton IDE préféré.
         1. place un point d'arrêt sur la première ligne qui s'exécute
@@ -237,9 +226,7 @@ On veut accomplir 2 éléments principaux :
 
         Si tu te rends à la fin de l'exécution et que toutes tes valeurs étaient bonnes, tu as bien compris ce que fait le code.
 
-    </TabItem>
-
-    <TabItem value="Procédure pour faire un exercice" label="Procédure pour faire un exercice">
+## Procédure pour faire un exercice
 
         1. ouvre ton repo d'exercices sur github.com
         2. crée un fichier avec le nom suggéré dans l'exercice en appuyant sur le bouton **+** puis **Create new file**
@@ -264,6 +251,3 @@ On veut accomplir 2 éléments principaux :
         6. Tu peux utiliser des balises html `</br>` pour faire un retour de ligne, par exemple dans la pile d'appels.
         7. Crée-toi un projet kotlin ou Android pour [valider ta trace](?recette-ecran=valider-une-trace) en utilisant le débogueur.
 
-
-    </TabItem>
-</Tabs>
