--- a/web/docs/03-recettes/retrofit-02-objet.mdx
+++ b/web/docs/03-recettes/retrofit-02-objet.mdx
@@ -28,8 +28,7 @@ Nous allons voir comment faire un appel à notre fonction depuis un écran:
   - une réponse du serveur mais avec un code d'erreur
   - un échec à recevoir une réponse
 
-<Tabs queryString="recette-objet">
-  <TabItem value="MainActivity.kt" label="MainActivity.kt">
+## MainActivity.kt
 
     L'écran suivant utilise Jetpack Compose pour l'interface graphique.
 
@@ -40,8 +39,7 @@ Nous allons voir comment faire un appel à notre fonction depuis un écran:
             endLine="76"
           />
 
-  </TabItem>
-  <TabItem value="debug" label="debug">
+## debug
 
     Il est important de placer 3 points d'arrêt pour ton débogage:
 
@@ -53,6 +51,3 @@ Nous allons voir comment faire un appel à notre fonction depuis un écran:
     2. Choisir View / Tool Windows / AppInspection
     3. Dans la fenêtre AppInspection, choisir l'onglet **Network Inspector**
     4. Tu devrais voir apparaître les appels réseaux de ton application
-
-  </TabItem>
-</Tabs>
